--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,7 @@
 .header {
   background-color: #f44336;
   padding: 30px 40px;
-  color: white;
+  /*color: white;*/
   text-align: center;
 }
 
@@ -46,22 +46,12 @@
 
 .addBtn {
   padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-.addBtn:hover {
-  background-color: #bbb;
-}
-
 .todo-container {
-  margin: 0 25%;
   font-size: 20px;
   display: flex;
   flex-direction: row wrap;
@@ -101,4 +91,23 @@
 
 .NORMAL {
   background-color: #5de95d;
+}
+
+.add-todo-form input, .add-todo-form textarea, .add-todo-form select {
+  display: inline-block;
+  width: 75%;
+  margin: 10px 0;
+  border-radius: 0;
+}
+
+label {
+  display: inline-block;
+  width: 25%;
+}
+
+select {
+  text-align: center;
+  background-color: #fff;
+  color: #000;
+  height: 40px;
 }
