--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,9 +58,11 @@ ul li:hover {
 ul li.checked {
   background: #888;
   color: #fff;
-  text-decoration: line-through;
 }
 
+ul li.checked .todo-name {
+  text-decoration: line-through;
+}
 
 /* Add a "checked" mark when clicked on */
 
